Fix edit button size on small screens

--- a/docs/css/screen.scss
+++ b/docs/css/screen.scss
@@ -238,6 +238,9 @@ html {
       }
       footer {
         flex-direction: column;
+        * {
+          margin: auto;
+        }
       }
     }
   }
